mobile spacing fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -36,7 +36,7 @@ body {
     font-family: var(--font-title);
     font-size: 1.25rem;
     padding: 2em;
-    margin-top: 3em;
+    margin-top: 3.5em;
     margin-bottom: -.25em;
 }
 .header--title {
@@ -61,6 +61,8 @@ body {
     margin-top: 2em;
     height: 250px;
     width: 100%;
+    padding-right: 1em;
+    padding-left: 1em;
 
     overflow-x: scroll;
     overflow-y: hidden;
@@ -128,7 +130,7 @@ body {
 
 
 .item9 {
-    margin-right: 2em;
+    margin-right: 1em;
 }
 .item1 {
     margin-left: 1em;
@@ -150,4 +152,5 @@ body {
 #################*/
 .footer {
     text-align: center;
+    margin-top: 0.5em;
 }
